restructure and 2025 day-01

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .env
 
-# problem input files
-**/inputs/input1.txt
-**/inputs/input2.txt
-**/inputs/test1.txt
-**/inputs/test2.txt
+# python
+__pycache__/
+.venv/
+
