--- a/languages/rust/justfile
+++ b/languages/rust/justfile
@@ -10,23 +10,23 @@ create year day:
   #!/usr/bin/env bash
   set -euo pipefail
   
-  year_dir="{{root_dir}}/{{year}}/rust"
-  mkdir -p "$year_dir"
-  cd "$year_dir"
-  cargo generate --path {{template_dir}} --name {{day}}
+  day_dir="{{root_dir}}/{{year}}/{{day}}"
+  mkdir -p "$day_dir"
+  cd "$day_dir"
+  cargo generate --path {{template_dir}} --name rust
 
 # Get inputs for a day
 get-inputs year day:
-  {{root_dir}}/scripts/get-inputs.sh --day {{day}} --year {{year}} --root-dir {{root_dir}}/{{year}}/rust
+  {{root_dir}}/scripts/get-inputs.sh --day {{day}} --year {{year}} --root-dir {{root_dir}}/{{year}}/{{day}}/rust
 
 # Run a solution
 run year day part:
-  cd {{root_dir}}/{{year}}/rust/{{day}} && cargo run --bin part{{part}}
+  cd {{root_dir}}/{{year}}/{{day}}/rust && cargo run --bin part{{part}}
 
 # Test a specific part
 test year day part:
-  cd {{root_dir}}/{{year}}/rust/{{day}} && cargo test part{{part}}
+  cd {{root_dir}}/{{year}}/{{day}}/rust && cargo test part{{part}}
 
 # Test all parts
 test-all year day:
-  cd {{root_dir}}/{{year}}/rust/{{day}} && cargo test
+  cd {{root_dir}}/{{year}}/{{day}}/rust && cargo test
