--- a/languages/cpp/justfile
+++ b/languages/cpp/justfile
@@ -32,12 +32,12 @@ get-inputs year day:
 
 # Run a solution
 run year day part:
-  cd {{root_dir}}/{{year}}/{{day}}/cpp && make part{{part}} && ./part{{part}}
+  @cd {{root_dir}}/{{year}}/{{day}}/cpp && make -s part{{part}} && ./part{{part}}
 
 # Test a specific part
 test year day part:
-  cd {{root_dir}}/{{year}}/{{day}}/cpp && make test{{part}}
+  @cd {{root_dir}}/{{year}}/{{day}}/cpp && make -s test{{part}}
 
 # Test all parts
 test-all year day:
-  cd {{root_dir}}/{{year}}/{{day}}/cpp && make test
+  @cd {{root_dir}}/{{year}}/{{day}}/cpp && make -s test
