--- a/languages/java/justfile
+++ b/languages/java/justfile
@@ -33,11 +33,11 @@ get-inputs year day:
 
 # Run a solution
 run year day part:
-  cd {{root_dir}}/{{year}}/{{day}}/java && java Part{{part}}.java
+  @cd {{root_dir}}/{{year}}/{{day}}/java && java Part{{part}}.java
 
 # Test a specific part
 test year day part:
-  cd {{root_dir}}/{{year}}/{{day}}/java && java Part{{part}}Test.java
+  @cd {{root_dir}}/{{year}}/{{day}}/java && java -ea Part{{part}}Test.java
 
 # Test all parts
 test-all year day:
