--- a/languages/cpp/justfile
+++ b/languages/cpp/justfile
@@ -19,10 +19,8 @@ create year day:
   cp {{template_dir}}/Makefile "$day_dir/"
   
   # Create empty input files
-  touch "$day_dir/inputs/input1.txt"
-  touch "$day_dir/inputs/input2.txt"
-  touch "$day_dir/inputs/test1.txt"
-  touch "$day_dir/inputs/test2.txt"
+  touch "$day_dir/inputs/input.txt"
+  touch "$day_dir/inputs/test.txt"
   
   echo "Created {{year}}/{{day}}/cpp with template files"
 
