--- a/languages/go/justfile
+++ b/languages/go/justfile
@@ -24,10 +24,8 @@ create year day:
   done
   
   # Create empty input files
-  touch "$day_dir/inputs/input1.txt"
-  touch "$day_dir/inputs/input2.txt"
-  touch "$day_dir/inputs/test1.txt"
-  touch "$day_dir/inputs/test2.txt"
+  touch "$day_dir/inputs/input.txt"
+  touch "$day_dir/inputs/test.txt"
   
   echo "Created {{year}}/{{day}}/go with template files"
 
