--- a/languages/kotlin/justfile
+++ b/languages/kotlin/justfile
@@ -20,10 +20,8 @@ create year day:
   cp {{template_dir}}/Part2Test.kt "$day_dir/"
   
   # Create empty input files
-  touch "$day_dir/inputs/input1.txt"
-  touch "$day_dir/inputs/input2.txt"
-  touch "$day_dir/inputs/test1.txt"
-  touch "$day_dir/inputs/test2.txt"
+  touch "$day_dir/inputs/input.txt"
+  touch "$day_dir/inputs/test.txt"
   
   echo "Created {{year}}/{{day}}/kotlin with template files"
 
