--- a/languages/python/justfile
+++ b/languages/python/justfile
@@ -25,10 +25,8 @@ create year day:
   uv add pytest
   
   # Create empty input files
-  touch "$day_dir/inputs/input1.txt"
-  touch "$day_dir/inputs/input2.txt"
-  touch "$day_dir/inputs/test1.txt"
-  touch "$day_dir/inputs/test2.txt"
+  touch "$day_dir/inputs/input.txt"
+  touch "$day_dir/inputs/test.txt"
   
   echo "Created {{year}}/{{day}}/python with template files"
 
